# PollyKing

./: .gitignore  README.md  start.sh
.claude/: settings.local.json
config/: .env.example  markets.json  prometheus.yml
data/: trades.db-shm  trades.db-wal
docs/: POLYMARKET_QUANT_SYSTEM_COMPLETE_GUIDE.md  runbook.md
logs/: arb_structured.jsonl
python-core/: bayes_engine.py  calibration.py  circuit_breaker.py  detector.py  ev_engine.py  execution_policy.py  executor.py  health.py  http_utils.py  kalshi_executor.py  kelly_engine.py  liquidity.py  main.py  matcher.py  metrics.py  notifier.py  opportunity_engine.py  polymarket_executor.py  pyproject.toml  reconciler.py  risk_engine.py  startup_audit.py  startup_check.py  tracker.py  two_leg_executor.py
python-core/data/: trades.db
python-core/logs/: arb_structured.jsonl
python-core/tests/: conftest.py  test_backfill.py  test_bayes_engine.py  test_calibration.py  test_chaos.py  test_circuit_breaker.py  test_detector.py  test_dry_run_audit.py  test_ev_engine.py  test_execution_policy.py  test_execution_telemetry.py  test_health.py  test_http_utils.py  test_kalshi_executor.py  test_kelly_engine.py  test_liquidity.py  test_main_fee_lookup.py  test_matcher.py  test_metrics.py  test_notifier.py  test_notifier_notify.py  test_opportunity_engine.py  test_polymarket_executor.py  test_reconciler.py  test_risk_engine.py  test_startup_audit.py  test_startup_check.py  test_tracker.py  test_two_leg_executor.py
rust-core/: Cargo.toml
rust-core/src/: bridge.rs  comparator.rs  executor.rs  lib.rs  main.rs  types.rs
rust-core/src/fetcher/: kalshi.rs  polymarket.rs
rust-core/tests/: comparator_tests.rs
scripts/: backfill_matches.py  check.sh  dry_run_audit.py  integration_test.py  moulti_router.py  setup.sh  terminal_ui.sh
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/data/: trades.db
tauri-app/src-tauri/src/: commands.rs  db.rs  lib.rs
(+33 files in other folders)
