[project]
name = "arb-python"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "py-clob-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
