[package]
name = "arb"
version = "0.1.0"
edition = "2021"

[lib]
name = "arb"
path = "src/lib.rs"

[[bin]]
name = "arb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
crossbeam-channel = "0.5"
env_logger = "0.11"
dotenv = "0.15"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
